[package]
name     = "cds-server"
resolver = "3"

authors      = { workspace = true }
edition      = { workspace = true }
homepage     = { workspace = true }
publish      = { workspace = true }
repository   = { workspace = true }
rust-version = { workspace = true }
version      = { workspace = true }

[dependencies]
cds-assets   = { workspace = true }
cds-cache    = { workspace = true }
cds-captcha  = { workspace = true }
cds-checker  = { workspace = true }
cds-cluster  = { workspace = true }
cds-db       = { workspace = true }
cds-engine   = { workspace = true }
cds-env      = { workspace = true }
cds-event    = { workspace = true }
cds-mailbox  = { workspace = true }
cds-media    = { workspace = true }
cds-migrator = { workspace = true }
cds-observe  = { workspace = true }
cds-queue    = { workspace = true }
cds-web      = { workspace = true }
cds-worker   = { workspace = true }

anyhow       = { workspace = true }
axum         = { workspace = true }
mimalloc     = { workspace = true }
rustls       = { workspace = true }
tokio        = { workspace = true }
tower-http   = { workspace = true }
tracing      = { workspace = true }

[[bin]]
name = "cds-server"
path = "src/main.rs"
