[package]
name = "cds-web"
version = "0.0.1"
edition = "2024"
publish = false
resolver = "2"

[dependencies]
cds-db = { workspace = true }
cds-cluster = { workspace = true }
cds-captcha = { workspace = true }
cds-cache = { workspace = true }
cds-config = { workspace = true }
cds-media = { workspace = true }
cds-queue = { workspace = true }
cds-checker = { workspace = true }

argon2 = { workspace = true }
axum = { workspace = true }
once_cell = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
http-serde = { workspace = true }
chrono = { workspace = true }
tower-http = { workspace = true }
jsonwebtoken = { workspace = true }
sea-orm = { workspace = true }
mime = { workspace = true }
validator = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
nanoid = { workspace = true }
cookie = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
tower_governor = { workspace = true }